# Xrecorder

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
funcs/: areacapture.cpp  areacapture.h  areacapture.ui  areaselector.cpp  areaselector.h  drawcursorcheckbox.cpp  drawcursorcheckbox.h  modes_area.cpp  modes_area.h  scr.cpp  scr.h  show_cursor.cpp  vid.cpp  vid.h
